@@ -17,6 +17,10 @@ ReportToSyslog=false
 # run in foreground [default: false; legal: true, false]
 Foreground=false
 
+# shell to use for executing programsi
+# [default: $SHELL or /bin/sh; legal: any shell that understands: -c COMMAND]
+#Shell=/bin/sh
+
 # display name for the main menu [default: lcdexec HOST]
 #DisplayName=lcdexec
 
