@@ -87,8 +87,15 @@ If not given, the default is FALSE for daemon mode.
 .TP 8
 .B DisplayName=\fIDisplay\fP
 Set the display name for the main menu.
-If not given it defaults to \fBlcdexec\fI \fIHOST\fP, where \fIHOST\fP
+If not given it defaults to \fBlcdexec\fP \fIHOST\fP, where \fIHOST\fP
 is the hostname of the system \fIlcdexec\fP is running on.
+.TP 8
+.B Shell=\fI/path/to/shell\fP
+Set the shell to use when executing programs.
+If not given, \fBlcdexec\fP tries to read the environment variable \fISHELL\fP.
+If that fails, it defaults to \fB/bin/sh\fP.
+Please note that the shell given here must understand the option \fB-c\fP 
+followed by the command line to execute.
 .PP
 
 The \fB[MainMenu]\fP section and the sections it refers to define the menu hierarchy
