@@ -8,6 +8,7 @@ Key:
 v.0.5.1+dev (stable branch)
  * fix switching on/off the Load screen in lcdproc client using the menu
  * fix cellwidth, vbar & hbar in iMon driver
+ * try harder to find a shell in lcdexec
 
 v.0.5.1
  + config file support in lcdproc client (Andrew Foss)
